--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+      <script src="assets/js/logo-move.js"></script>
 
 	</body>
 </html>
