Re-upload entire website

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
     <!-- Right column -->
     <div class="right-column">
+      <img src="../images/logo-right.png" alt="Right Logo" class="logo-right-mobile" />
       <div class="social-icons">
         <a href="#" target="_blank">
           <img src="images/tiktok.png" alt="TikTok">
@@ -68,17 +69,6 @@
     </div>
 
   </section>
-
-
-
-	<!-- Right column -->
-	<div class="right-column">
-	<div class="social-icons">
-		<a href="#"><i class="fab fa-tiktok"></i></a>
-		<a href="#"><i class="fab fa-youtube"></i></a>
-		<a href="#"><i class="fab fa-instagram"></i></a>
-		<a href="#"><i class="fab fa-twitch"></i></a>
-	</div>
 	</div>
 </div>
 </section>
