--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <!-- Left column -->
     <div class="left-column">
+      <img src="images/logo-left.png" alt="Left Logo" class="logo-left-mobile" />
       <h1>THE BEAUTIFUL GAME, REMIXED FOR A NEW GENERATION.</h1>
       <p>Join the squad — lace up your boots and be the first to know what’s coming. Sign up below to unlock early access and join the insiders’ locker room.</p>
 
@@ -38,7 +39,7 @@
     <div class="locker-section">
       <div class="locker-room-wrapper">
         <div class="locker-left">
-        <a href="https://discord.gg/YOURSERVER" class="locker-room">
+        <a href="https://discord.gg/YOURSERVER" class="locker-room discord-button">
           <i class="fab fa-discord"></i> Enter the Locker Room
         </a>
         </div>
@@ -51,7 +52,7 @@
 
     <!-- Right column -->
     <div class="right-column">
-      <img src="../images/logo-right.png" alt="Right Logo" class="logo-right-mobile" />
+      <img src="images/logo-right.png" alt="Right Logo" class="logo-right-mobile" />
       <div class="social-icons">
         <a href="#" target="_blank">
           <img src="images/tiktok.png" alt="TikTok">
