--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 <body class="is-preload">
 
   <!-- Logos -->
-  <div class="logo-left">
+  <div class="hide-on-mob">
+  <div class="logo-left hide-on-mob">
     <img src="images/logo-left.png" alt="Logo Left">
   </div>
-  <div class="logo-right">
+  <div class="logo-right hide-on-mob">
     <img src="images/logo-right.png" alt="Logo Right">
   </div>
+  </div> 
 
   <!-- Main intro section -->
   <section id="intro" class="wrapper style1 fullscreen fade-up" style="background: url('images/lockers.jpg') center/cover no-repeat; display: flex; justify-content: center; align-items: center; flex-direction: row; padding-top:100px;">
