--- a/index.html
+++ b/index.html
@@ -49,12 +49,28 @@
         <span class="locker-room-text">Join our discord community to get all the latest action</span>
         </div>
         <img src="images/logo-right.png" alt="Right Logo" class="logo-right-mobile" />
+            <div class="right-column hide-on-desktop">
+              <div class="social-icons">
+                <a href="#" target="_blank">
+                  <img src="images/tiktok.png" alt="TikTok">
+                </a>
+                <a href="#" target="_blank">
+                  <img src="images/yt.png" alt="YouTube">
+                </a>
+                <a href="#" target="_blank">
+                  <img src="images/instagram.png" alt="Instagram">
+                </a>
+                <a href="#" target="_blank">
+                  <img src="images/twitch.png" alt="Twitch">
+                </a>
+              </div>
+            </div>
       </div>
       </div>
     </div>
 
     <!-- Right column -->
-    <div class="right-column">
+    <div class="right-column hide-on-mob">
       <div class="social-icons">
         <a href="#" target="_blank">
           <img src="images/tiktok.png" alt="TikTok">
