Re-upload entire website

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <span class="locker-room-text">Join our discord community to get all the latest action</span>
         </div>
         <img src="images/logo-right.png" alt="Right Logo" class="logo-right-mobile" />
-            <div class="right-column hide-on-desktop">
+            <div class="hide-on-desktop">
               <div class="social-icons">
                 <a href="#" target="_blank">
                   <img src="images/tiktok.png" alt="TikTok">
