Re-upload entire website

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <p class="locker-room-sub-text">Join the squad — lace up your boots and be the first to know what’s coming. Sign up below to unlock early access and join the insiders’ locker room.</p>
 
       <!-- Signup pill -->
+    <div class="signup-stack">
       <form action="MAILCHIMP_URL" method="post" target="_blank" class="signup-form">
         <input type="email" name="EMAIL" placeholder="Email..." required>
         <button type="submit">JOIN THE GAME</button>
@@ -44,6 +45,7 @@
         <a href="https://discord.gg/YOURSERVER" class="locker-room discord-button">
           <i class="fab fa-discord"></i> Enter the Locker Room
         </a>
+        </div>
         </div>
         <div class="locker-right">
         <span class="locker-room-text">Join our discord community to get all the latest action</span>
