Re-upload entire website

--- a/index.html
+++ b/index.html
@@ -26,51 +26,58 @@
   <section id="intro" class="wrapper style1 fullscreen fade-up" style="background: url('images/lockers.jpg') center/cover no-repeat; display: flex; justify-content: center; align-items: center; flex-direction: row; padding-top:100px;">
 
     <!-- Left column -->
-    <div class="left-column">
-      <img src="images/logo-left.png" alt="Left Logo" class="logo-left-mobile" />
-      <h1>THE BEAUTIFUL GAME, REMIXED FOR A NEW GENERATION.</h1>
-      <p class="locker-room-sub-text">Join the squad — lace up your boots and be the first to know what’s coming. Sign up below to unlock early access and join the insiders’ locker room.</p>
+    <!-- Left column -->
+<div class="left-column">
+  <img src="images/logo-left.png" alt="Left Logo" class="logo-left-mobile" />
 
-      <!-- Signup + Buttons Stack -->
-      <div class="signup-stack">
+  <h1>THE BEAUTIFUL GAME, REMIXED FOR A NEW GENERATION.</h1>
 
-        <!-- Signup Form -->
-        <form action="MAILCHIMP_URL" method="post" target="_blank" class="signup-form">
-          <input type="email" name="EMAIL" placeholder="Email..." required>
-          <button type="submit">JOIN THE GAME</button>
-        </form>
+  <div class="signup-container">
+    <!-- Short paragraph -->
+    <p class="locker-room-sub-text">
+      Join the squad — lace up your boots and be the first to know what’s coming. Sign up below to unlock early access and join the insiders’ locker room.
+    </p>
 
-        <!-- Discord Button -->
-        <a href="https://discord.gg/YOURSERVER" class="locker-room discord-button">
-          <i class="fab fa-discord"></i> Enter the Locker Room
-        </a>
+    <!-- Signup + Discord Stack -->
+    <div class="signup-stack">
 
-      </div>
+      <!-- Email Signup Form -->
+      <form action="MAILCHIMP_URL" method="post" target="_blank" class="signup-form">
+        <input type="email" name="EMAIL" placeholder="Email..." required>
+        <button type="submit">JOIN THE GAME</button>
+      </form>
 
-      <!-- Locker Section (sub-text, right logo, socials) -->
-      <div class="locker-section">
-        <div class="locker-room-wrapper">
+      <!-- Discord Button -->
+      <a href="https://discord.gg/YOURSERVER" class="discord-button">
+        <i class="fab fa-discord"></i> Enter the Locker Room
+      </a>
+    </div>
 
-          <div class="locker-right">
-            <span class="locker-room-text">
-              Join our discord community to get all the latest action
-            </span>
-          </div>
-
-          <img src="images/logo-right.png" alt="Right Logo" class="logo-right-mobile" />
-
-          <div class="hide-on-desktop">
-            <div class="social-icons">
-              <a href="#" target="_blank"><img src="images/tiktok.png" alt="TikTok"></a>
-              <a href="#" target="_blank"><img src="images/yt.png" alt="YouTube"></a>
-              <a href="#" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
-              <a href="#" target="_blank"><img src="images/twitch.png" alt="Twitch"></a>
-            </div>
-          </div>
-
+    <!-- Locker Section (sub-text + right logo + socials) -->
+    <div class="locker-section">
+      <div class="locker-room-wrapper">
+        <div class="locker-right">
+          <span class="locker-room-text">
+            Join our discord community to get all the latest action
+          </span>
         </div>
+
+        <img src="images/logo-right.png" alt="Right Logo" class="logo-right-mobile" />
+
+        <div class="hide-on-desktop">
+          <div class="social-icons">
+            <a href="#" target="_blank"><img src="images/tiktok.png" alt="TikTok"></a>
+            <a href="#" target="_blank"><img src="images/yt.png" alt="YouTube"></a>
+            <a href="#" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
+            <a href="#" target="_blank"><img src="images/twitch.png" alt="Twitch"></a>
+          </div>
+        </div>
+
       </div>
     </div>
+  </div>
+</div>
+
 
     <!-- Right column -->
     <div class="right-column hide-on-mob">
