--- a/index.html
+++ b/index.html
@@ -23,60 +23,73 @@
   </div> 
 
   <!-- Main intro section -->
-<section id="intro" class="wrapper style1 fullscreen fade-up">
-  <div class="left-column">
+  <section id="intro" class="wrapper style1 fullscreen fade-up" style="background: url('images/lockers.jpg') center/cover no-repeat;">
 
-    <!-- Top Logo -->
-    <img src="images/logo-left.png" alt="Left Logo" class="logo-left-mobile" />
+    <!-- Left column -->
+    <!-- Left column -->
+<div class="left-column">
+  <img src="images/logo-left.png" alt="Left Logo" class="logo-left-mobile" />
 
-    <h1>THE BEAUTIFUL GAME, REMIXED FOR A NEW GENERATION.</h1>
+  <h1>THE BEAUTIFUL GAME, REMIXED FOR A NEW GENERATION.</h1>
 
-    <!-- Signup container -->
-    <div class="signup-container">
+  <div class="signup-container">
+    <!-- Short paragraph -->
+    <p class="locker-room-sub-text">
+      Join the squad — lace up your boots and be the first to know what’s coming. Sign up below to unlock early access and join the insiders’ locker room.
+    </p>
 
-      <!-- Paragraph above signup -->
-      <p class="locker-room-sub-text">
-        Join the squad — lace up your boots and be the first to know what’s coming. Sign up below to unlock early access and join the insiders’ locker room.
-      </p>
+    <!-- Signup + Discord Stack -->
+    <div class="signup-stack">
 
-      <!-- Signup + Discord -->
-      <div class="signup-stack">
-        <form action="MAILCHIMP_URL" method="post" target="_blank" class="signup-form">
-          <input type="email" name="EMAIL" placeholder="Email..." required>
-          <button type="submit">JOIN THE GAME</button>
-        </form>
+      <!-- Email Signup Form -->
+      <form action="MAILCHIMP_URL" method="post" target="_blank" class="signup-form">
+        <input type="email" name="EMAIL" placeholder="Email..." required>
+        <button type="submit">JOIN THE GAME</button>
+      </form>
 
-        <a href="https://discord.gg/YOURSERVER" class="discord-button">
-          <i class="fab fa-discord"></i> Enter the Locker Room
-        </a>
-      </div>
+      <!-- Discord Button -->
+      <a href="https://discord.gg/YOURSERVER" class="discord-button">
+        <i class="fab fa-discord"></i> Enter the Locker Room
+      </a>
+    </div>
 
-      <!-- Locker section -->
-      <div class="locker-section">
-        <div class="locker-room-wrapper">
-          <div class="locker-right">
-            <span class="locker-room-text">
-              Join our discord community to get all the latest action
-            </span>
-          </div>
-
-          <img src="images/logo-right.png" alt="Right Logo" class="logo-right-mobile" />
-
-          <div class="hide-on-desktop">
-            <div class="social-icons">
-              <a href="#"><img src="images/tiktok.png" alt="TikTok"></a>
-              <a href="#"><img src="images/yt.png" alt="YouTube"></a>
-              <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
-              <a href="#"><img src="images/twitch.png" alt="Twitch"></a>
-            </div>
-          </div>
-
+    <!-- Locker Section (sub-text + right logo + socials) -->
+    <div class="locker-section">
+      <div class="locker-room-wrapper">
+        <div class="locker-right">
+          <span class="locker-room-text">
+            Join our discord community to get all the latest action
+          </span>
         </div>
+
+        <img src="images/logo-right.png" alt="Right Logo" class="logo-right-mobile" />
+
+        <div class="hide-on-desktop">
+          <div class="social-icons">
+            <a href="#" target="_blank"><img src="images/tiktok.png" alt="TikTok"></a>
+            <a href="#" target="_blank"><img src="images/yt.png" alt="YouTube"></a>
+            <a href="#" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
+            <a href="#" target="_blank"><img src="images/twitch.png" alt="Twitch"></a>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
-</section>
+</div>
 
+
+    <!-- Right column -->
+    <div class="right-column hide-on-mob">
+      <div class="social-icons">
+        <a href="#" target="_blank"><img src="images/tiktok.png" alt="TikTok"></a>
+        <a href="#" target="_blank"><img src="images/yt.png" alt="YouTube"></a>
+        <a href="#" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
+        <a href="#" target="_blank"><img src="images/twitch.png" alt="Twitch"></a>
+      </div>
+    </div>
+
+  </section>
 
   <!-- Scripts -->
   <script src="assets/js/jquery.min.js"></script>
