Re-upload entire website

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <!-- Signup pill -->
       <form action="MAILCHIMP_URL" method="post" target="_blank" class="signup-form">
         <input type="email" name="EMAIL" placeholder="Email..." required>
-        <button type="submit">JOIN THE GAME</button>
+        <button type="submit" class="join-button">JOIN THE GAME</button>
       </form>
 
       <!-- Locker room button + text -->
