Re-upload entire website

--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
       <p class="locker-room-sub-text">Join the squad — lace up your boots and be the first to know what’s coming. Sign up below to unlock early access and join the insiders’ locker room.</p>
 
       <!-- Signup pill -->
+      <div class="join-button">
       <form action="MAILCHIMP_URL" method="post" target="_blank" class="signup-form">
-        <input type="email" name="EMAIL" placeholder="Email..." required>
-        <button type="submit" class="join-button">JOIN THE GAME</button>
+        <input type="email" name="EMAIL" placeholder="Email..." required>        
+        <button type="submit" >JOIN THE GAME</button>
       </form>
-
+      </div>
       <!-- Locker room button + text -->
     <div class="locker-section">
       <div class="locker-room-wrapper">
