Re-upload entire website

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
       <!-- Tab Cards -->
       <div class="tab-card">
         <div id="privacy" class="tab-content active" role="tabpanel" aria-hidden="false">
-            <h1>Privacy Policy – FIFA Heroes</h1>
+            <h1  class="outlined-text">Privacy Policy – FIFA Heroes</h1>
             <p><strong>Last updated:</strong> [Insert Date]</p>
             <p>Enver Studio ("we", "our", "us") develops and operates the FIFA Heroes game and website (the "Service"). We are committed to protecting your privacy and handling your data fairly, transparently, and securely.</p>
 
@@ -82,7 +82,7 @@
 
         </div>
         <div id="terms" class="tab-content" role="tabpanel" aria-hidden="true">
-        <h1>Terms & Conditions (Terms of Service) – FIFA Heroes</h1>
+        <h1  class="outlined-text">Terms & Conditions (Terms of Service) – FIFA Heroes</h1>
         <p><strong>Last updated:</strong> [Insert Date]</p>
         <p>These Terms govern your use of the FIFA Heroes website and game ("Service"), operated by Enver Studio. By accessing or using the Service, you agree to these Terms.</p>
 
@@ -123,7 +123,7 @@
 
         </div>
         <div id="cookies" class="tab-content" role="tabpanel" aria-hidden="true">
-            <h1>Cookie Policy – FIFA Heroes</h1>
+            <h1  class="outlined-text">Cookie Policy – FIFA Heroes</h1>
             <p><strong>Last updated:</strong> [Insert Date]</p>
             <p>Our website uses cookies to improve your browsing experience.</p>
 
