--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <!-- Locker room button + text -->
     <div class="locker-section">
       <div class="locker-room-wrapper">
-
+        <div class="footer-mobile">
         <img src="images/logo-right.png" alt="Right Logo" class="logo-right-mobile" />
         <div class="hide-on-desktop">         
               <div class="social-icons">
@@ -66,7 +66,8 @@
                   <img src="images/twitch.png" alt="Twitch">
                 </a>
               </div>
-            </div>
+        </div>
+        </div>
       </div>
       </div>
     </div>
