Re-upload entire website

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   <img src="images/tiktok.png" alt="TikTok">
                 </a>
                 <a href="#" target="_blank">
-                  <img src="images/yt.png" alt="YouTube">
+                  <img src="images/YT.png" alt="YouTube">
                 </a>
                 <a href="#" target="_blank">
                   <img src="images/instagram.png" alt="Instagram">
@@ -81,7 +81,7 @@
                   <img src="images/tiktok.png" alt="TikTok">
                 </a>
                 <a href="#" target="_blank">
-                  <img src="images/yt.png" alt="YouTube">
+                  <img src="images/YT.png" alt="YouTube">
                 </a>
                 <a href="#" target="_blank">
                   <img src="images/instagram.png" alt="Instagram">
