--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="left-column">
             <img src="images/logo-left.png" alt="Left Logo" class="logo-left-mobile" />
             <h1>THE BEAUTIFUL GAME, REMIXED FOR A NEW GENERATION.</h1>
-            <p class="locker-room-sub-text">Join the squad — lace up your boots and be the first to know what’s coming. Sign up below to unlock early access and join the insiders’ locker room.</p>
+            <p class="locker-room-sub-text">Exclusive early access. Limited spots.</p>
 
             <!-- Signup form -->
             <div class="join-button">
