Force push entire project

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Main intro section -->
     <section id="intro" class="main-content wrapper style1 fullscreen fade-up" style="background: url('images/lockers.jpg') center/cover no-repeat; display: flex; justify-content: center; align-items: center; flex-direction: row; padding-top:100px;">
-
+      <div class="container">
         <!-- Left column -->
         <div class="left-column">
             <h1>THE BEAUTIFUL GAME, REMIXED FOR A NEW GENERATION.</h1>
@@ -37,6 +37,7 @@
         </div>
 
         <!-- Right column -->
+         <div class="right-column">
           <div class="frame-block">
 
               <!-- Heading -->
@@ -53,6 +54,8 @@
               </a>
 
           </div>
+          </div>
+        </div>
 
     </section>
 
