Force push entire project

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </header>
 
     <!-- Main intro section -->
-    <section id="intro" class="main-content wrapper style1 fullscreen fade-up" style="background: url('images/lockers.jpg') center/cover no-repeat; display: flex; justify-content: center; align-items: center; flex-direction: row; padding-top:100px;">
+    <section id="intro" class="main-content wrapper style1 fullscreen fade-up" style="background: url('images/lockers.jpg') center/cover no-repeat; display: flex; justify-content: center; align-items: center; flex-direction: row; padding-top:100px;">    
+    <!-- The top image -->
       <div class="container">
         <!-- Left column -->
         <div class="left-column">
@@ -37,7 +38,9 @@
         </div>
 
         <!-- Right column -->
+
          <div class="right-column">
+          <img src="images/tag.png" id="top-image" alt="Tag Image">
           <div class="frame-block">
 
               <!-- Heading -->
