--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
               </a>
 
           </div>
+          <img src="images/bottom.png" alt="Bottom decoration" class="frame-bottom-image">
           </div>
         </div>
 
@@ -74,7 +75,7 @@
               </div>
               <div class="footer-right">
                 <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
-                      <i class="fab fa-instagram"></i>
+                      <i class="fa-brands fa-instagram fa-2x"></i>
                   </a>
                   <a href="https://www.youtube.com" target="_blank" aria-label="YouTube">
                       <i class="fab fa-youtube"></i>
