Force push entire project

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <!-- Main intro section -->
-    <section id="intro" class="main-content wrapper style1 fullscreen fade-up" style="background: url('images/lockers.jpg') center/cover no-repeat; display: flex; justify-content: center; align-items: center; flex-direction: row; padding-top:100px;">    
+    <section id="intro" class="main-content wrapper style1 fullscreen fade-up" style="background: url('images/lockers_new.png') center/cover no-repeat; display: flex; justify-content: center; align-items: center; flex-direction: row; padding-top:100px;">    
     <!-- The top image -->
       <div class="container">
         <!-- Left column -->
@@ -73,17 +73,20 @@
                   </div>
                   <div class="footer-left-text">© 2025 Enver Studio. FIFA Heroes. All rights reserved.</div>
               </div>
-              <div class="footer-right">
-                <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
-                      <i class="fa-brands fa-instagram fa-2x"></i>
-                  </a>
-                  <a href="https://www.youtube.com" target="_blank" aria-label="YouTube">
-                      <i class="fab fa-youtube"></i>
-                  </a>
-                  <a href="https://www.tiktok.com" target="_blank" aria-label="TikTok">
-                      <i class="fab fa-tiktok"></i>
-                  </a>
-              </div>
+                <div class="footer-right">
+                    <a href="https://" target="_blank" aria-label="X">
+                        <img src="images/x.png" alt="Instagram">
+                    </a>
+                    <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
+                        <img src="images/instagram.png" alt="Instagram">
+                    </a>
+                    <a href="https://www.youtube.com" target="_blank" aria-label="YouTube">
+                        <img src="images/youtube.png" alt="YouTube">
+                    </a>
+                    <a href="https://www.tiktok.com" target="_blank" aria-label="TikTok">
+                        <img src="images/tiktok.png" alt="TikTok">
+                    </a>
+                </div>
           </footer>
 
 
