Force push entire project

--- a/privacy.html
+++ b/privacy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>FIFA Heroes - Terms of Use</title>
+    <title>FIFA Heroes - Privacy Notice</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -19,55 +19,62 @@
         </div>
     </header>
 
-    <!-- Scrollable Terms Content -->
+    <!-- Scrollable Privacy Content -->
     <section id="intro" class="main-content wrapper style1 fullscreen fade-up" style="background: url('images/lockers_new.png') center/cover no-repeat; display: flex; justify-content: center; align-items: center; flex-direction: row; padding-top:100px;">
     <div class="terms-content">
-        <h2>TERMS OF USE</h2>
+        <h2>PRIVACY NOTICE</h2>
         <p><strong>Effective Date: September 22, 2025</strong></p>
 
-        <p>Welcome to FIFA Heroes, an officially licensed FIFA mobile football game operated by Enver Studio (“Company,” “we,” “us,” or “our”). By using our websites, mobile applications, and related services (collectively, the “Services”), you agree to these Terms of Use.</p>
+        <p>This Privacy Notice explains how Enver Studio collects, uses, and shares information when you use FIFA Heroes and related Services.</p>
 
         <ol>
             <li>
-                <strong>Eligibility</strong><br>
-                Minimum age: 13 years. If under 18, you need parental consent.
-            </li>
-            <li>
-                <strong>Services Provided</strong><br>
-                FIFA Heroes is a mobile football game featuring in-app purchases.
-                Users may engage via our website (email sign-up) and community platforms such as Discord.
-            </li>
-            <li>
-                <strong>Prohibited Conduct</strong><br>
-                You agree not to:
+                <strong>Data We Collect</strong><br>
                 <ul>
-                    <li>Cheat, hack, exploit bugs, or use automation/bots.</li>
-                    <li>Harass, threaten, or defraud others.</li>
-                    <li>Resell, trade, or transfer items/accounts.</li>
-                    <li>Upload unlawful, infringing, or harmful content.</li>
-                    <li>Interfere with security or disrupt Services.</li>
+                    <li>Contact data: emails submitted through sign-up forms.</li>
+                    <li>Community data: Discord usernames and interactions.</li>
+                    <li>Technical data: cookies, device info, IP addresses, analytics.</li>
+                    <li>Payment info: processed securely by app stores (Apple/Google) or partners.</li>
                 </ul>
             </li>
             <li>
-                <strong>In-App Purchases</strong><br>
-                Virtual currency, items, or content are licensed, not owned.
-                They hold no real-world value and are non-refundable unless required by law.
+                <strong>How We Use Data</strong><br>
+                <ul>
+                    <li>To provide and improve Services and gameplay.</li>
+                    <li>For marketing, communication, and community engagement.</li>
+                    <li>For analytics, research, and security.</li>
+                    <li>To fulfill licensing and partnership obligations with FIFA.</li>
+                </ul>
             </li>
             <li>
-                <strong>Intellectual Property</strong><br>
-                All content, trademarks, and materials belong to Enver Studio and/or FIFA.
+                <strong>Sharing Data</strong><br>
+                <p>We may share data with:</p>
+                <ul>
+                    <li>Service providers (e.g., Mailchimp, Discord).</li>
+                    <li>FIFA, in connection with our official license.</li>
+                    <li>Legal authorities if required.</li>
+                </ul>
+                <p>We do not sell personal data.</p>
             </li>
             <li>
-                <strong>Disclaimer & Limitation of Liability</strong><br>
-                Services are provided “AS IS”. We disclaim all warranties. To the maximum extent permitted by law, Enver Studio and FIFA shall not be liable for indirect, incidental, or consequential damages.
+                <strong>Data Storage & Transfers</strong><br>
+                <p>Data may be stored in the US, EU, or other regions, depending on third-party providers.</p>
             </li>
             <li>
-                <strong>Governing Law & Disputes</strong><br>
-                These Terms are governed by the laws of the United States (New York State). Disputes will be resolved by binding arbitration under the American Arbitration Association (AAA) in New York County, NY.
+                <strong>Your Rights</strong><br>
+                <p>You may have the right to access, correct, or delete your data, or opt out of marketing. Contact us to exercise these rights.</p>
+            </li>
+            <li>
+                <strong>Children’s Privacy</strong><br>
+                <p>Services are not directed to children under 13. If we learn we collected data from a child under 13 without parental consent, we will delete it.</p>
+            </li>
+            <li>
+                <strong>Updates</strong><br>
+                <p>We may update this Notice; continued use means you accept the updated version.</p>
             </li>
             <li>
                 <strong>Contact Us</strong><br>
-                Email: contact@enverstudio.com
+                <p>Email: contact@enverstudio.com</p>
             </li>
         </ol>
     </div>
