Force push entire project

--- a/index.html
+++ b/index.html
@@ -30,10 +30,30 @@
 
             <!-- Signup form -->
             <div class="join-button">
-                <form action="MAILCHIMP_URL" method="post" target="_blank" class="signup-form">
-                    <input type="email" name="EMAIL" placeholder="Email..." required>        
-                    <button type="submit">JOIN THE GAME</button>
-                </form>
+              <form action="https://enverstudio.us10.list-manage.com/subscribe/post?u=0c5e017f586fcc099ead7eab3&amp;id=446283dd0c&amp;f_id=0076e7e1f0" 
+                    method="post" 
+                    target="_blank" 
+                    class="signup-form" 
+                    id="mc-embedded-subscribe-form" 
+                    name="mc-embedded-subscribe-form" 
+                    novalidate>
+
+                  <input type="email" name="EMAIL" placeholder="Email..." required id="mce-EMAIL">
+
+                  <!-- Honeypot field (for bots, keep hidden) -->
+                  <div style="position:absolute; left:-5000px;" aria-hidden="true">
+                      <input type="text" name="b_0c5e017f586fcc099ead7eab3_446283dd0c" tabindex="-1" value="">
+                  </div>
+
+                  <button type="submit" name="subscribe" id="mc-embedded-subscribe">JOIN THE GAME</button>
+
+                  <!-- Optional: success/error messages -->
+                  <div id="mce-responses" class="clear">
+                      <div class="response" id="mce-error-response" style="display:none;"></div>
+                      <div class="response" id="mce-success-response" style="display:none;"></div>
+                  </div>
+              </form>
+
             </div>
         </div>
 
