Force push entire project

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                     <a href="https://www.instagram.com/fifaheroes/" target="_blank" aria-label="Instagram">
                         <img src="images/instagram.png" alt="Instagram">
                     </a>
-                    <a href="#" target="_blank" aria-label="YouTube">
+                    <a href="https://youtube.com/@playfifaheroes?feature=shared" target="_blank" aria-label="YouTube">
                         <img src="images/youtube.png" alt="YouTube">
                     </a>
-                    <a href="#" target="_blank" aria-label="TikTok">
+                    <a href="https://www.tiktok.com/@fifaheroes?_t=ZN-8zyT3f7xlF1&_r=1" target="_blank" aria-label="TikTok">
                         <img src="images/tiktok.png" alt="TikTok">
                     </a>
                 </div>
