--- a/termsofuse.html
+++ b/termsofuse.html
@@ -84,16 +84,16 @@
             <div class="footer-left-text">© 2025 Enver Studio. FIFA Heroes. All rights reserved.</div>
         </div>
         <div class="footer-right">
-            <a href="https://" target="_blank" aria-label="X">
-                <img src="images/x.png" alt="X">
+            <a href="https://x.com/PlayFIFAHeroes" target="_blank" aria-label="X">
+                <img src="images/x.png" alt="Instagram">
             </a>
-            <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
+            <a href="https://www.instagram.com/fifaheroes/" target="_blank" aria-label="Instagram">
                 <img src="images/instagram.png" alt="Instagram">
             </a>
-            <a href="https://www.youtube.com" target="_blank" aria-label="YouTube">
+            <a href="https://youtube.com/@playfifaheroes?feature=shared" target="_blank" aria-label="YouTube">
                 <img src="images/youtube.png" alt="YouTube">
             </a>
-            <a href="https://www.tiktok.com" target="_blank" aria-label="TikTok">
+            <a href="https://www.tiktok.com/@fifaheroes?_t=ZN-8zyT3f7xlF1&_r=1" target="_blank" aria-label="TikTok">
                 <img src="images/tiktok.png" alt="TikTok">
             </a>
         </div>
