--- a/termsofuse.html
+++ b/termsofuse.html
@@ -74,30 +74,36 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer-desktop">
-        <div class=" footer-left">
-            <div class="footer-icons">
-                <img src="images/fifa.png" alt="" style="width: 20px !important;">
-                <img src="images/fifa2.png" alt="" style="width: 20px !important;">
-                <img src="images/enver.png" alt="" style="width: 75px !important;">
+        <footer class="footer-desktop">
+            <div class="footer-left">
+                <div class="footer-icons">
+                    <img src="images/fifa.png" alt="" style="width: 20px !important;">
+                    <img src="images/fifa2.png" alt="" style="width: 20px !important;">
+                    <img src="images/enver.png" alt="" style="width: 75px !important;">
+                </div>
+                <div class="footer-left-text">© 2025 Enver Studio. FIFA Heroes. All rights reserved.</div>
             </div>
-            <div class="footer-left-text">© 2025 Enver Studio. FIFA Heroes. All rights reserved.</div>
-        </div>
-        <div class="footer-right">
-            <a href="https://x.com/PlayFIFAHeroes" target="_blank" aria-label="X">
-                <img src="images/x.png" alt="Instagram">
-            </a>
-            <a href="https://www.instagram.com/fifaheroes/" target="_blank" aria-label="Instagram">
-                <img src="images/instagram.png" alt="Instagram">
-            </a>
-            <a href="https://youtube.com/@playfifaheroes?feature=shared" target="_blank" aria-label="YouTube">
-                <img src="images/youtube.png" alt="YouTube">
-            </a>
-            <a href="https://www.tiktok.com/@fifaheroes?_t=ZN-8zyT3f7xlF1&_r=1" target="_blank" aria-label="TikTok">
-                <img src="images/tiktok.png" alt="TikTok">
-            </a>
-        </div>
-    </footer>
+            <div class="footer-right">
+                <div class="footer-links">
+                    <a href="./termsofuse.html">Terms Of Use</a>
+                    <a href="./privacy.html">Privacy Policy</a>
+                </div>
+                <div class="social-icons">
+                    <a href="https://x.com/PlayFIFAHeroes" target="_blank" aria-label="X">
+                        <img src="images/x.png" alt="X">
+                    </a>
+                    <a href="https://www.instagram.com/fifaheroes/" target="_blank" aria-label="Instagram">
+                        <img src="images/instagram.png" alt="Instagram">
+                    </a>
+                    <a href="https://youtube.com/@playfifaheroes?feature=shared" target="_blank" aria-label="YouTube">
+                        <img src="images/youtube.png" alt="YouTube">
+                    </a>
+                    <a href="https://www.tiktok.com/@fifaheroes?_t=ZN-8zyT3f7xlF1&_r=1" target="_blank" aria-label="TikTok">
+                        <img src="images/tiktok.png" alt="TikTok">
+                    </a>
+                </div>
+            </div>
+        </footer>
 
 </body>
 </html>
