Force push entire project

--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
           <div class="frame-block">
 
               <!-- Heading -->
-              <h2 class="frame-heading">Join the Squad</h2>
+              <h2 class="frame-heading">CLAIM YOUR ROLE</h2>
 
               <!-- Paragraph -->
               <p class="frame-paragraph">
-                  Be part of the action and stay updated with the latest game events.
+                  Join Discord today, secure your FIFA Heroes badge, and unlock exclusive updates, perks, and community rewards.
               </p>
 
               <!-- Button -->
               <a href="https://discord.gg/YOURSERVER" class="frame-button">
-                  <i class="fab fa-discord"></i> Join Discord Now
+                  <i class="fab fa-discord"></i> Join Discord
               </a>
 
           </div>
@@ -121,7 +121,7 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="scripts/form.js"></script>
+    <script src="assets/js/form.js"></script>
 
 </body>
 </html>
