Force push entire project

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="container">
         <!-- Left column -->
         <div class="left-column">
-            <h1>THE BEAUTIFUL GAME, REMIXED FOR A NEW GENERATION.</h1>
+            <h1 class="locker-heading">THE BEAUTIFUL GAME, REMIXED FOR A NEW GENERATION.</h1>
             <p class="locker-room-sub-text">Exclusive early access. Limited spots.</p>
 
             <!-- Signup form -->
